// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Promo Media Indicator should not render if item media object has no format 1`] = `
<MediaIndicator
  datetime="PT1H33M20S"
  duration="1:33:20"
  service="news"
  topStory={false}
  type={null}
/>
`;

exports[`Story Promo Media Indicator should render a photo gallery item correctly 1`] = `
<MediaIndicator
  datetime={null}
  duration={null}
  service="news"
  topStory={false}
  type="photogallery"
/>
`;

exports[`Story Promo Media Indicator should render a video item correctly 1`] = `
<MediaIndicator
  datetime="PT1H33M20S"
  duration="1:33:20"
  service="news"
  topStory={false}
  type="video"
/>
`;

exports[`Story Promo Media Indicator should render an audio item correctly 1`] = `
<MediaIndicator
  datetime="PT59S"
  duration="0:59"
  service="news"
  topStory={false}
  type="audio"
/>
`;

exports[`Story Promo Media Indicator should render correctly even without duration 1`] = `
<MediaIndicator
  datetime={null}
  duration={null}
  service="news"
  topStory={false}
  type="video"
/>
`;
